--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 
 
-.conteiner {
+.container {
     background-color: hsl(0, 0%, 96%);
     display: grid;
     grid-template-columns: repeat(4, minmax(100px, 1fr));
@@ -21,7 +21,6 @@
 .create-post {
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
     align-items: center;
     gap: 3rem;
     background-color: hsl(31, 66%, 93%);
@@ -102,6 +101,8 @@
     grid-area: 3 / 1 / 5 / 1;
     background-color: hsl(39, 100%, 71%);
     padding: 2rem;
+    display: flex;
+    flex-direction: column;
 }
 
 .write-content h4 {
@@ -187,4 +188,16 @@
 .follower-growth h4 {
     font-size: 2.5rem;
     font-weight: 500;
+}
+
+@media (max-width: 1020px) {
+    .container {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+    }
+
+    .conteudo {
+        grid-area: auto;
+    }
+
 }
